--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "nuxt": "^3.8.0",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "contentful": "^10.6.5"
   }
 }
