--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nuxt": "^3.8.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
+    "tailwindcss": "^3.3.5",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5"
   },
