--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "contentful": "^10.6.5",
-    "gsap": "^3.12.2",
-    "nuxt-swiper": "^1.2.2"
+    "nuxt-swiper": "^1.2.2",
+    "gsap": "^3.12.2"
   }
 }
