--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "contentful": "^10.6.5"
+    "contentful": "^10.6.5",
+    "gsap": "^3.12.2"
   }
 }
